correct font-weight on accordion button

--- a/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -4455,9 +4455,10 @@ textarea.form-control-lg {
   position: relative;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 100%; 
   padding: var(--bs-accordion-btn-padding-y) var(--bs-accordion-btn-padding-x);
   font-size: calc(1.275rem + 0.3vw) !important;
+  font-weight: normal !important;
   color: var(--bs-white) !important;
   text-align: left;
   background: var(--bs-uqpurple) !important;
