--- a/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -56,6 +56,7 @@
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  --bs-uq-gradient: linear-gradient(90deg, rgba(81,36,122,1) 0%, rgba(150,42,139,1) 70%, rgba(255,255,255,1) 100%);
   --bs-body-font-family: var(--bs-font-sans-serif);
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
