commit bloom's understanding image for use as icon

--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -161,6 +161,9 @@ background-image: url('/uqlearnx/img/white_report.png');
 .icon-video-camera-white{
   background-image: url('/uqlearnx/img/video_camera_white.png')
 }
+.icon-blooms-understanding-white{
+  background-image: url('/uqlearnx/img/blooms-understanding-white.png')
+}
 .icon-jigsaw-black{
   background-image: url('/uqlearnx/img/activities-black.png');
 }
