rem text-shadow from .btn + box shadow correction

--- a/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -2857,6 +2857,7 @@ textarea.form-control-lg {
   border-radius: var(--bs-btn-border-radius);
   background: var(--bs-btn-bg);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-shadow: none !important;
 }
 @media (prefers-reduced-motion: reduce) {
   .btn {
