--- a/phrm2300/css/customStyles.css
+++ b/phrm2300/css/customStyles.css
@@ -9,6 +9,15 @@ margin-bottom: var(--bs-alert-margin-bottom) !important;
 div.accordion h2{
   margin: 0px !important;
 }
+button.btn{
+box-shadow: inset 0 1px 0 0 var(--bs-btn-border-color);
+}
+button:hover:not(:disabled){
+  box-shadow: inset 0 1px 0 0 var(--bs-btn-border-color);
+}
+button:active:not(:disabled){
+  border: none !important;
+}
 .tooltip::after{
 content: none !important;
 }
