--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -2,7 +2,9 @@
 color: var(--bs-alert-color) !important;
 margin-bottom: var(--bs-alert-margin-bottom) !important;  
 }
-
+.xmodule_display.xmodule_HtmlBlock i, i{
+  font-style: unset !important;
+}
 .xmodule_display.xmodule_HtmlBlock .table th{
  background: var(--bs-table-bg) !important;
 }
