make uq button text white by default

--- a/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -3057,6 +3057,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-bg: #51247A !important;
   --bs-btn-disabled-border-color: #51247A !important;  
   background: var(--bs-btn-bg);
+  color: #fff !important;
 }
 
 .btn-outline-primary {
