--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -5,9 +5,9 @@ margin-bottom: var(--bs-alert-margin-bottom) !important;
 .xmodule_display.xmodule_HtmlBlock i, i{
   font-style: unset !important;
 }
-.xmodule_display.xmodule_HtmlBlock .table th{
+/*.xmodule_display.xmodule_HtmlBlock .table th{
  background: var(--bs-table-bg) !important;
-}
+}*/
 div.accordion h2{
   margin: 0px !important;
 }
