--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -14,6 +14,9 @@ div.accordion h2{
 a.btn-uq, a.btn-primary, a.btn-dark, a.btn-danger, a.btn-success, a.btn-secondary{
   color: #fff !important;
 }
+div.preview-menu div a.btn{
+  color: #fff !important;
+}
 body, h1, h2, h3, h4, h5, h6, p, label{
   text-align: unset !important;
 }
