add indenting and no list style to reference lists

--- a/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -11050,5 +11050,12 @@ textarea.form-control-lg {
 .rotate-180{
   transform: rotate(180deg);
 }
+ul.referenceList{
+  list-style-type: none;
+}
+ul.referenceList li{
+  padding-left: 40px;
+  text-indent: -40px;
+}
 
 /*# sourceMappingURL=bootstrap.css.map */
