--- a/phrm2300/css/customStyles.css
+++ b/phrm2300/css/customStyles.css
@@ -8,6 +8,9 @@ margin-bottom: var(--bs-alert-margin-bottom) !important;
 .xmodule_display.xmodule_HtmlBlock .table th{
  background: var(--bs-table-bg) !important;
 }
+.alert p{
+  color: inherit !important;
+}
 .five-e{
   background: #e2f3fe;
   padding: 0.5rem !important;
