update alert rule to include multiple subelements

--- a/phrm2300/css/customStyles.css
+++ b/phrm2300/css/customStyles.css
@@ -8,7 +8,7 @@ margin-bottom: var(--bs-alert-margin-bottom) !important;
 .xmodule_display.xmodule_HtmlBlock .table th{
  background: var(--bs-table-bg) !important;
 }
-.alert p{
+.alert :is(p, ul, ol, div){
   color: inherit !important;
 }
 .five-e{
