--- a/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -5741,7 +5741,7 @@ textarea.form-control-lg {
   padding: var(--bs-tooltip-padding-y) var(--bs-tooltip-padding-x);
   color: var(--bs-tooltip-color);
   text-align: center;
-  background-color: var(--bs-tooltip-bg);
+  background-color: #000 !important;
   border-radius: var(--bs-tooltip-border-radius);
 }
 
