commit psw icon class

--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -178,6 +178,9 @@ background-image: url('/uqlearnx/img/white_report.png');
 .icon-blooms-understanding-white{
   background-image: url('/uqlearnx/img/blooms-understanding-white.png')
 }
+.icon-psw-white{
+  background-image: url('/uqlearnx/medi7100/img/psw-white.png')
+}
 .icon-jigsaw-black{
   background-image: url('/uqlearnx/img/activities-black.png');
 }
