--- a/medi7100/css/customStyles.css
+++ b/medi7100/css/customStyles.css
@@ -2,6 +2,11 @@
 color: var(--bs-alert-color) !important;
 margin-bottom: var(--bs-alert-margin-bottom) !important;  
 }
+button:active, button:focus {
+    box-shadow: none !important;
+    text-shadow: none !important;
+    font-weight: 600 !important;
+}
 .xmodule_display.xmodule_HtmlBlock i, i{
   font-style: unset !important;
 }
